# mxm-pipeline

./: CHANGELOG.md  Makefile  PR_BODY.md  README.md  pyproject.toml
.github/workflows/: daily-smoke.yml  release.yml
docs/: RUNBOOK.md
docs/adr/: 0001-asset-layer-from-day1.md  0002-task-centric-execution-model.md  0003-prefect-owns-operational-truth.md
docs/workpackages/: mxm-pipeline-v0.1.0.md
src/mxm/pipeline/: __init__.py  api.py  cli.py  graph_ascii.py  registry.py  spec.py  types.py
src/mxm/pipeline/adapters/: prefect_adapter.py
src/mxm/pipeline/demos/: prefect_demo.py
src/mxm/pipeline/execution/: context.py
src/mxm/pipeline/reporting/: events.py  layout.py  models.py  recorder.py  sinks.py  stores.py
src/mxm/pipeline/reporting/sqlite/: backend.py
src/mxm/pipeline/reporting/sqlite/migrations/: 0001_reporting_core.sql  0001_semantic_events.sql
src/mxm/pipeline/utils/: clock.py  ids.py  serde.py
tests/: conftest.py  test_api.py  test_cli_smoke.py  test_execution_context.py  test_prefect_adapter_build.py  test_prefect_adapter_execute.py  test_prefect_adapter_run.py  test_spec_smoke.py  test_utils_clock.py  test_utils_ids.py  test_utils_serde.py
tests/reporting/: test_events.py  test_execution_events_store.py  test_flowrun_store.py  test_layout.py  test_models.py  test_reporting_recorder.py  test_reporting_semantic_event_integration.py  test_reporting_store.py  test_semantic_event_integration.py  test_semantic_events_store.py  test_taskattempt_store.py  test_taskrun_store.py
