[tool.poetry]
name = "mxm-pipeline"
version = "0.1.0"
description = "\"Pipeline orchestration and operator CLI for Money Ex Machina — Prefect-backed flows, text-first ergonomics, and optional asset metadata.\""
authors = ["mxm <contact@moneyexmachina.com>"]
license = "MIT"
readme = "README.md"
keywords = ["money-ex-machina", "orchestration", "prefect", "pipeline", "cli", "tui", "provenance", "data-engineering", "assets"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: System :: Distributed Computing",
  "Topic :: Software Development :: Build Tools",
]
packages = [{ include = "mxm", from = "src" }]
include = [
  { path = "LICENSE" },
  { path = "src/mxm/pipeline/py.typed", format = "wheel" },
  { path = "src/mxm/pipeline/_data/seeds/**/*.yaml", format = "wheel" },
]

[tool.poetry.urls]
"Homepage" = "https://github.com/moneyexmachina/mxm-pipeline"
"Repository" = "https://github.com/moneyexmachina/mxm-pipeline"
"Issues" = "https://github.com/moneyexmachina/mxm-pipeline/issues"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
prefect = "^3.6.1"
typer = "~0.19.0"
rich = "^13.9.2"
networkx = "^3.4.2"
textual = "^0.62.0"

[tool.poetry.scripts]
mxm-pipeline = "mxm.pipeline.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"
black = "^25.9.0"
isort = "^7.0.0"
ipython = "^9.5.0"
pytest = "^8.4.2"
pyright = "^1.1.407"

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E","F","B","UP","C90","RUF"]
ignore = ["E203","E501", "I001", "I002"]
[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["mxm"]
combine_as_imports = true
force_sort_within_sections = true
lines_between_types = 1

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

